--- a/WinForms/RedBlinkWinForms.csproj
+++ b/WinForms/RedBlinkWinForms.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Messages.cs" />
     <Compile Include="RedBlink.cs">
       <SubType>Form</SubType>
     </Compile>
