--- a/UI/RedWinTaskBar/RedTaskBar.csproj
+++ b/UI/RedWinTaskBar/RedTaskBar.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <RootNamespace>JanHoffmann.Red.UI.RedTaskBar</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
